<resources>
    <string name="app_name">Water Drink Reminder</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="customedrinkwaterinfo">Please enter your basic information, and we\'ll customize drink water plan for you.</string>
    <string name="daily_drink_target">Daily Drink Target</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="got_it">GOT IT</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="male">Male</string>
    <string name="ml">ml</string>
    <string name="next">NEXT</string>
    <string name="setdrink">Set drink water hours</string>
    <string name="skip">Skip</string>
    <string name="smartreminder">Smart reminder will reminds you on time</string>
    <string name="start">START</string>
    <string name="timeawake">Time to awake</string>
    <string name="timesleep">Time to sleep</string>
    <string name="weight">Weight</string>
    <string name="well_done_stay_hydrated">Well done, stay hydrated!</string>
    <string name="you_ve_stay_hydrated_for">You\'ve stay hudrated for</string>
</resources>
