<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <drinkwater.health.waterdrinkalarm.watertracker.drinkwaterreminder.Helper.Guidebar
        android:id="@+id/guidebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guidebar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/customedrinkwaterinfo"
        android:textColor="#3d3d3d"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/txtweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/weight"
        android:fontFamily="@font/gravitybold"
        android:textColor="#3d3d3d"
        android:textSize="@dimen/_16sdp" />

    <ImageView
        android:id="@+id/weightimg"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/txtweight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/ic_weight" />

    <LinearLayout
        android:id="@+id/linearweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightimg"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/textviewweight"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_7sdp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:text="65"
                android:fontFamily="@font/gravitybold"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_7sdp"
                android:padding="@dimen/_1sdp">

                <Button
                    android:id="@+id/buttonkg"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/kgback"
                    android:text="@string/kg"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <Button
                    android:id="@+id/buttonlb"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@android:color/transparent"
                    android:text="@string/lb"
                    android:textAllCaps="false"
                    android:textColor="#3d3d3d"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/buttonext"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_below="@+id/linearweight"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:fontFamily="@font/gravitybold"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/textviewskip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/_12sdp"
        android:text="@string/skip"
        android:fontFamily="@font/gravitybold"
        android:textColor="#3d3d3d"
        android:textSize="@dimen/_14sdp" />

</RelativeLayout>
