<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <drinkwater.health.waterdrinkalarm.watertracker.drinkwaterreminder.Helper.Guidebar
        android:id="@+id/guidebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp" />

    <TextView
        android:id="@+id/textinformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guidebar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/customedrinkwaterinfo"
        android:textColor="#3d3d3d"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/txtsetdrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinformation"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gravitybold"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:text="@string/setdrink"
        android:textColor="#3d3d3d"
        android:textSize="@dimen/_17sdp" />

    <TextView
        android:id="@+id/txtreminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtsetdrink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/font"
        android:text="@string/smartreminder"
        android:textColor="#3d3d3d"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtreminder"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/relawake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/g4"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_day" />

            <TextView
                android:id="@+id/ks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/g4"
                android:layout_centerHorizontal="true"
                android:text="@string/timeawake"
                android:fontFamily="@font/font"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="#3d3d3d"
                android:textSize="@dimen/_10sdp" />

            <LinearLayout
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ks"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/edittexttimeawake"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:background="#00000000"
                    android:maxLength="6"
                    android:text="08:00"
                    android:textColor="@color/colorPrimary"
                    android:textIsSelectable="true"
                    android:fontFamily="@font/gravitybold"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relsleep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ig"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_night" />
            <TextView
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ig"
                android:layout_centerHorizontal="true"
                android:text="@string/timesleep"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/font"
                android:textColor="#3d3d3d"
                android:textSize="@dimen/_10sdp" />
            <LinearLayout
                android:id="@+id/jo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q1"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/edittexttimesleep"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:background="#00000000"
                    android:maxLength="6"
                    android:text="22:00"
                    android:textColor="@color/colorPrimary"
                    android:textIsSelectable="true"
                    android:fontFamily="@font/gravitybold"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonstart"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_below="@+id/l2"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_bg"
        android:text="@string/start"
        android:fontFamily="@font/gravitybold"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />
</RelativeLayout>
